--- a/style.css
+++ b/style.css
@@ -164,3 +164,30 @@ label {
 .loginbttm {
     padding: 0px;
 } 
+
+
+/*floating button*/
+
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:#19323C;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+	box-shadow: 2px 2px 3px #999;
+    border-width: 20px;
+    text-decoration: none;
+    visibility: hidden;
+    
+}
+
+.my-float{
+	margin-top:22px;
+    
+    font-size: 35px;
+    
+}
