--- a/style.css
+++ b/style.css
@@ -52,6 +52,13 @@
 
   }
 
+  #footer2 p,h5{
+    color: white; 
+    margin-top: 30px;
+    margin-bottom: 30px;
+
+  }
+
   
   #sideList{
    margin-left: 30px;
